# ForgeStore-Distributed-object-storage

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/gateway/: Cargo.toml  README.md
crates/gateway/src/: main.rs  server.rs
crates/iam/: README.md
crates/metadata/: Cargo.toml
crates/metadata/src/: api.rs  main.rs
crates/metadata/src/bucket_metadata/: mod.rs
crates/metadata/src/raft/: extras.rs  mod.rs  raft_node.rs
crates/metadata/src/storage_engine/: mod.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/protobuf/: metadata.proto
crates/protocol/src/: lib.rs
docs/: architecture.md  deployement.md
