[workspace]
resolver = "3"
members = [
    "crates/gateway",
    "crates/metadata",
    # "crates/storage-node",
    # "crates/cluster-manager",
    # "crates/rebalancer",
    # "crates/scrubber",
    # "crates/garbage-collector",
    # "crates/common",
    "crates/protocol",
    # "crates/placement",
    # "crates/replication",
    # "crates/iam",
]