[package]
name = "metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
tonic = { version = "0.12", features = ["transport"] }
chrono = "0.4.45"
uuid = { version = "1.24.0", features = ["v4"] }
anyhow = "1.0.104"
rocksdb = "0.24.0"
serde_json = "1.0.151"
