[package]
name = "metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
tonic = { version = "0.12", features = ["transport"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
rocksdb = "0.24"
raft = { version = "0.7.0", default-features = false, features = ["prost-codec"] }
prost = "0.13"
slog = "2.8"
slog-term = "2.9"
slog-async = "2.8"
dotenvy = "0.15.7"
